--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/ioredis": "^4.28.10",
+    "body-parser": "^2.2.0",
+    "bullmq": "^5.56.0",
     "concurrently": "^9.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
+    "mongoose": "^8.16.0",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
