--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
     "mongoose": "^8.16.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
