--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^2.2.0",
     "bullmq": "^5.56.0",
     "concurrently": "^9.2.0",
+    "dockerode": "^4.0.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
@@ -28,6 +29,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@types/dockerode": "^3.3.41",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "ts-node": "^10.9.2",
